src/objects/Deal__c.object
<CustomObject>
    <fields>
        <fullName>Account_Country__c</fullName>
        <description>Used in the email template</description>
        <formula>TEXT(Account__r.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <description>Used by the email template</description>
        <formula>TEXT(Account__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Sub_Region__c</fullName>
        <description>Used in the email template</description>
        <formula>TEXT( Account__r.Sub_Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Sub Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Sales force Account for which Deal is being created</description>
        <inlineHelpText>The Sales force Account for which Deal is being created</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Description__c</fullName>
        <label>Deal Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <displayFormat>DEAL-{00000}</displayFormat>
        <externalId>true</externalId>
        <label>Deal #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Finance_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Finance Director for the Account</description>
        <inlineHelpText>Finance Director for the Account</inlineHelpText>
        <label>Finance Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deals2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if Deal has one or more attachments, false if Deal has no attachment.</description>
        <label>Has Attachments?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_MDF_SDF_Discount__c</fullName>
        <label>Has MDF/SDF Discount?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_ASP_Less_Than_Floor__c</fullName>
        <label>Is ASP &lt; Floor?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_MDF_SDF_Discount_Over_500k__c</fullName>
        <label>Is MDF/SDF Discount &gt; $500k?</label>
        <picklist>
            <controllingField>Has_MDF_SDF_Discount__c</controllingField>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_NSBD_Greater_Than_25M__c</fullName>
        <label>Is NSBD &gt; $25M ?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Total_Discount_100K__c</fullName>
        <label>Is Total Discount &gt; $100K?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Approver1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deals3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Approver2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deals4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Approver3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Approver3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deals5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NSA__c</fullName>
        <label>NSA</label>
        <summarizedField>Deal_Product__c.NSA__c</summarizedField>
        <summaryForeignKey>Deal_Product__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NSBD__c</fullName>
        <inlineHelpText>Net Sales Before Discount</inlineHelpText>
        <label>NSBD</label>
        <summarizedField>Deal_Product__c.NSBD__c</summarizedField>
        <summaryForeignKey>Deal_Product__c.Deal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Portfolio_Segment__c</fullName>
        <label>Portfolio Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iDEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Rejected_By__c</fullName>
        <label>Rejected By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejection_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Indicates how many times the deal has been rejected.</inlineHelpText>
        <label>Rejection Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <inlineHelpText>The date on which this deal will be reviewed</inlineHelpText>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To be checked by the Sales Ops team after the review.</inlineHelpText>
        <label>Reviewed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_GM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales GM Responsible for the account</description>
        <inlineHelpText>Sales GM Responsible for the account</inlineHelpText>
        <label>Sales GM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_VP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales VP for the account</description>
        <inlineHelpText>Sales VP for the account</inlineHelpText>
        <label>Sales VP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted For Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submit_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>How many times did the user submit this deal for approval?</inlineHelpText>
        <label>Submit Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Deal (custom-old)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Deal__c</columns>
        <columns>Status__c</columns>
        <columns>Account_Country__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <nameField>
        <label>Deal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deals (custom-old)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Deal_Disallow_Has_Attachments</fullName>
        <active>true</active>
        <description>Do not allow &quot;Has Attachments&quot; to be checked while creating a new deal.</description>
        <errorConditionFormula>AND(ISNEW(), Has_Attachments__c == true)</errorConditionFormula>
        <errorDisplayField>Has_Attachments__c</errorDisplayField>
        <errorMessage>You are not allowed to check this during deal creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MDF_SDF_Discount_Over_250K_Required</fullName>
        <active>true</active>
        <description>If the MDF/SDF discount is selected, MDF/SDF Discount Over 250 K has to be answered.</description>
        <errorConditionFormula>AND( ISPICKVAL( Has_MDF_SDF_Discount__c , &apos;Yes&apos;),  TEXT( Is_MDF_SDF_Discount_Over_500k__c) = &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Is_MDF_SDF_Discount_Over_500k__c</errorDisplayField>
        <errorMessage>Is MDF/SDF Discount &gt; 500k?</errorMessage>
    </validationRules>
</CustomObject>